<resources>
    <string name="app_name">GitForAndroid</string>
    <string name="app_quit">Quit</string>

    <!-- Activity titles -->
    <string name="title_activity_repo_view">Repository</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Errors -->
    <string name="error_init_failed">Failed to initialize repository</string>
    <string name="error_clone_failed">Failed to clone repository</string>
    <string name="error_add_failed">Failed to stage items</string>
    <string name="error_rm_failed">Failed to unstage items</string>
    <string name="error_delete_failed">Failed to delete items</string>
    <string name="error_commit_failed">Failed to commit</string>
    <string name="error_diff_failed">Failed to get repository diff</string>
    <string name="error_push_failed">Failed to push branch</string>
    <string name="error_pull_failed">Failed to pull branch</string>
    <string name="error_rename_failed">Failed to rename</string>
    <string name="error_io_failed">Filesystem error</string>
    <string name="error_repo_name_conflict">This repository already exists</string>
    <string name="error_need_clone_URI">Target URI required for cloning</string>
    <string name="error_storage_unavailable">Filesystem unavailable</string>
    <string name="error_field_blank">Cannot be empty</string>

    <!-- Main activity menu -->
    <string name="menu_main_settings">Settings</string>

    <!-- Repo view long-press menu -->
    <string name="menu_repo_view_stage">Add To Staging</string>
    <string name="menu_repo_view_unstage">Remove From Staging</string>
    <string name="menu_repo_view_delete">Delete</string>
    <!-- Repo view activity menu -->
    <string name="menu_repo_view_push">Push</string>
    <string name="menu_repo_view_pull">Pull</string>
    <string name="menu_repo_view_quick_commit">Quick commit</string>
    <string name="menu_repo_view_add_all">Add all files</string>
    <string name="menu_repo_view_open_manager">Open in file manager</string>
    <string name="intent_open_manager_chooser">Choose file manager</string>

    <!-- Snack action text -->
    <string name="snack_action_revert_commit">Revert</string>

    <!-- Snack text -->
    <string name="snack_clone_success">Cloned repository</string>
    <string name="snack_init_success">Initialized repository</string>
    <string name="snack_item_stage_success">Items staged</string>
    <string name="snack_item_unstage_success">Items unstaged</string>
    <string name="snack_item_stage_all_success">All repository items staged</string>
    <string name="snack_item_commit_success">Created commit: %s</string>
    <string name="snack_item_push_success">Pushed to remote: %s</string>
    <string name="snack_item_pull_success">Pulled from remote: %s</string>
    <string name="snack_item_delete_success">Items deleted</string>

    <!-- Push/Pull dialog-->
    <string name="dialog_push_pull_switch_existing_remote">Manual Remote</string>
    <string name="dialog_push_pull_remote_list_empty">No remotes available</string>
    <string name="dialog_push_pull_manual_remote_hint">Remote URL</string>
    <string name="dialog_push_pull_title_push">Push</string>
    <string name="dialog_push_pull_title_pull">Pull</string>
    <string name="dialog_push_pull_confirm_push">Push</string>
    <string name="dialog_push_pull_confirm_pull">Pull</string>
    <string name="dialog_push_pull_cancel">Cancel</string>

    <!-- Commit dialog -->
    <string name="dialog_commit_title">Commit</string>
    <string name="dialog_commit_message_hint">Commit message</string>
    <string name="dialog_commit_substitute_switch">Set committer data</string>
    <string name="dialog_commit_su_name_hint">Name</string>
    <string name="dialog_commit_su_email_hint">Email</string>
    <string name="dialog_commit_confirm">Commit</string>
    <string name="dialog_commit_cancel">Cancel</string>

    <!-- New repo dialog -->
    <string name="dialog_add_repo_name_hint">Repository Name</string>
    <string name="dialog_add_repo_clone_switch">Clone</string>
    <string name="dialog_add_repo_cloneURL_hint">URL</string>
    <string name="dialog_add_repo_confirm">Create</string>
    <string name="dialog_add_repo_cancel">Cancel</string>
    <string name="dialog_add_repo_title">New Repository</string>

    <!-- Password dialog -->
    <string name="dialog_pass_title">Password</string>
    <string name="dialog_pass_data_hint">Password</string>
    <string name="dialog_pass_cancel">Cancel</string>
    <string name="dialog_pass_confirm">Send</string>

    <!-- Repo settings dialog -->
    <string name="dialog_repo_settings_title">Repository Settings</string>
    <string name="dialog_repo_settings_rename">Rename</string>
    <string name="dialog_repo_settings_enable_delete">Enable Delete</string>
    <string name="dialog_repo_settings_delete">Delete</string>

    <!-- Empty folder text -->
    <string name="folder_empty_repo_view">There is nothing here</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_git">Git Config</string>

    <string name="pref_git_full_name">Full Name</string>
    <string name="pref_git_default_full_name">John Smith</string>

    <string name="pref_git_email">Email Address</string>
    <string name="pref_git_default_email">email@example.com</string>

    <string name="pref_git_username">Username</string>
    <string name="pref_git_default_username">User</string>

    <!--<string name="pref_title_social_recommendations">Enable social recommendations</string>-->
    <!--<string name="pref_description_social_recommendations">Recommendations for people to contact-->
    <!--based on your message history-->
    <!--</string>-->


    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>-->
    <!--<string-array name="pref_example_list_titles">-->
    <!--<item>Always</item>-->
    <!--<item>When possible</item>-->
    <!--<item>Never</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_example_list_values">-->
    <!--<item>1</item>-->
    <!--<item>0</item>-->
    <!--<item>-1</item>-->
    <!--</string-array>-->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_something_terrible">Oops</string>
</resources>
