<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_git_default_full_name"
        android:inputType="textPersonName"
        android:key="git_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_git_full_name"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_git_default_email"
        android:inputType="textEmailAddress"
        android:key="git_email"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_git_email"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_git_default_username"
        android:inputType="text"
        android:key="git_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_git_username"/>

</PreferenceScreen>
