<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="?android:attr/dialogPreferredPadding"
    android:rowCount="3">

    <EditText
        android:id="@+id/renameRepo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:ems="10"
        android:inputType="text|textNoSuggestions"/>

    <Button
        android:id="@+id/renameRepoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="0"
        android:text="@string/dialog_repo_settings_rename"/>

    <Switch
        android:id="@+id/enableDeleteSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="1"
        android:padding="@dimen/switch_padding"
        android:text="@string/dialog_repo_settings_enable_delete"/>

    <Button
        android:id="@+id/deleteRepoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:enabled="false"
        android:text="@string/dialog_repo_settings_delete"/>

</GridLayout>